--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:prod": "node --max-old-space-size=512 ./node_modules/@angular/cli/bin/ng build --prod"
+    "build:prod": "node --max-old-space-size=512 ./node_modules/@angular/cli/bin/ng build --configuration production"
   },
   "private": true,
   "dependencies": {
