👷 automate deployment to aws

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "actions:build:prod": "ng build --configuration=production",
     "build:prod": "node --max-old-space-size=512 ./node_modules/@angular/cli/bin/ng build --configuration production"
   },
   "private": true,
