✏️ install correct dependencies / remove bad aws input

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ jobs:
   deploy-app:
     name: App Deployment
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
@@ -18,7 +18,6 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: af-south-1
-        output-format: json
 
     - name: Setup NodeJS and Cache
       uses: actions/setup-node@v3
@@ -27,7 +26,7 @@ jobs:
         cache: 'npm'
 
     - name: Install Dependencies
-      run: npm ci
+      run: npm ci --force
       
     - name: Build App
       run: npm run actions:build:prod
