--- a/angular.json
+++ b/angular.json
@@ -11,6 +11,7 @@
       "prefix": "app",
       "architect": {
         "build": {
+          "baseHref": "https://thuthuka111.github.io/Portfolio/",
           "defaultConfiguration": "development",
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
