--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,23 +1,17 @@
-name: Build and Deploy
+name: Deploy Angular to GitHub Pages
+
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
 
 jobs:
-  deploy-app:
-    name: App Deployment
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repo
+    - name: Checkout Code
       uses: actions/checkout@v3
-
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: af-south-1
 
     - name: Setup NodeJS and Cache
       uses: actions/setup-node@v3
@@ -27,12 +21,12 @@ jobs:
 
     - name: Install Dependencies
       run: npm ci --force
-      
+
     - name: Build App
       run: npm run actions:build:prod
 
-    - name: Deploy
-      working-directory: ./dist/portfolio
-      run: | 
-        aws s3 cp ./ s3://portfolio.thuthuka.me --recursive
-        aws cloudfront create-invalidation --distribution-id EWQ45ZR3PFOX9 --paths '/*'
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./dist/portfolio
