--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,11 @@ jobs:
     - name: Build App
       run: npm run actions:build:prod
 
+    - name: Print current working directory
+      run: pwd
+
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./dist/portfolio
+        publish_dir: ../dist/portfolio
