--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,10 +26,12 @@ jobs:
       run: npm run actions:build:prod
 
     - name: Print current working directory
-      run: pwd
+      run: |
+        pwd
+        ls -al dist/portfolio
 
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+      uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ../dist/portfolio
+        publish_dir: ./dist/portfolio
